# zarr_fuse

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  aws.sh  env.example  pyproject.toml  pytest.ini  python_coding.md  setup_env.sh  tmp.sh  tox.ini
app/databuk/dashboard/backend/: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  run.py  start_backend.ps1  test_affine_bounds.py
app/databuk/ingress_server/: .env-template  README.MD  docker-compose.yaml  endpoints_config.yaml  main.py  pyproject.toml
app/databuk/ingress_server/charts/: Chart.yaml  values.yaml
app/databuk/ingress_server/docs/: swagger.yaml
app/databuk/ingress_server/inputs/: configuration.yaml
app/databuk/ingress_server/oci/: Containerfile  ExtractorService.containerfile  README.md  extractor.Containerfile  extractor.containerfile  ingress.containerfile
app/databuk/ingress_server/schemes/: sensors_scheme_v1.yaml  tree_scheme_v1.yaml
app/databuk/ingress_server/sensors/: __init__.py  endpoints.py  scheme.yaml
app/databuk/ingress_server/src/: .env-template  __init__.py  active_scrapper.py  auth.py  ci_test_endpoints_config.yaml  configs.py  endpoints_config.yaml  extractor.py  io_utils.py  main.py  prod_endpoints_config.yaml  worker.py
app/databuk/ingress_server/tools/: request_example.py  request_test.py  swagger_gen.py
app/databuk/ingress_server/tree/: __init__.py  endpoints.py  scheme.yaml
app/databuk/ingress_server/weather/: __init__.py  endpoints.py  scheme.yaml
dashboard/: .env.example  CONFIG_PACKAGING.md  DEPLOYMENT.md  DOCS_INDEX.md  QUICKSTART.md  README.md  REFACTOR_NOTES.md  TEMPLATE.md  WORKFLOW.md  __init__.py  app.py  composed.py  config.py  data.py  map_views.py  multi_time_views.py  plot_selection.py  plot_styles.py  pyproject.toml  requirements.txt  s3_tile_server.py  serve_dashboard.py  setup_env  setup_env.sh  sidebar.py  tile_service.py  ui.py
dashboard/api/: __init__.py  main.py
dashboard/api/routers/: config.py  config_compat.py
dashboard/api/services/: data_service.py
dashboard/charts/holoviz/: Chart.yaml  README.md  values.yaml
dashboard/charts/holoviz/templates/: ingress.yaml
dashboard/config/: __init__.py  dashboard_config.py  endpoints.yaml
dashboard/config/bukov_endpoint/: 12p_final.png.points  bukov_georef.json  bukov_georef2.json
dashboard/config/surface_data_endpoint/: uhelna_georef.geo.json  uhelna_georef.raw.json
dashboard/docs/: DOCS_INDEX.md  QUICKSTART.md  REFACTOR_NOTES.md  TEMPLATE.md  tile_pyramid_README.md
dashboard/oci/: backend.Containerfile  frontend.Containerfile
dashboard/schemas/: __init__.py  bukov_schema.yaml
dashboard/scripts/: check_endpoint_stores.py  prepare_bukov_gcps.py  start_backend.ps1  start_dashboard.ps1
dashboard/test/: check_endpoint_stores.py  s3_tile_resolver_test.py  s3_tile_server-out.py  store_structure.py  test_dataset_variable_report.py  test_map_marker_payload.py  test_plot_selection_state.py  test_plot_style_mapping.py  test_tabulator_matrix.py  upload_s3.py
ingress_server/: .env-template  .example.env  Makefile  README.MD  README.md  docker-compose.yaml  pyproject.toml  setup_venv.sh  test.py
ingress_server/charts/ingress-server/: Chart.yaml  values.yaml
ingress_server/charts/ingress-server/templates/: deployment.yaml  pvc.yaml  secret.yaml
ingress_server/charts/ingress-server/values/: minimal-required-values.yaml
ingress_server/charts/zarr-fuse-ingress/: .schema.yaml  Chart.yaml  Makefile  README.md  airflow.yaml  values.schema.json  values.yaml
ingress_server/charts/zarr-fuse-ingress/templates/: ingress.yaml
ingress_server/charts/zarr-fuse-ingress/values/: defaults.yaml  main.yaml  minimal-required-values.yaml  pull-request.yaml  tag.yaml  testing.yaml
ingress_server/ingress_server/: active_scrapper.py  app_config.py  auth.py  configs.py  data_types.py  extractor.py  io_utils.py  logging_setup.py  main.py  models.py  worker.py
ingress_server/ingress_server/active_scrapper/: __init__.py  active_scrapper_config_models.py  context.py  iterate.py  planner.py  render.py  request_builder.py  runner.py  scheduler.py
ingress_server/ingress_server/io/: __init__.py  content_type.py  dataframe.py  extractor.py  files.py  notifier.py  process.py  validate.py
ingress_server/ingress_server/passive_scrapper/: __init__.py  auth.py  routes.py
ingress_server/inputs/: configuration.yaml  endpoints_config.yaml
ingress_server/oci/: Containerfile  extractor.Containerfile  ingress.Containerfile  install_extractor_dependencies.sh  install_extras.sh
ingress_server/services/: __init__.py
ingress_server/services/extractor_service/: __init__.py  pyproject.toml
ingress_server/services/extractor_service/dags/: __init__.py  dag.py
ingress_server/services/extractor_service/workflows/: __init__.py
ingress_server/services/ingress_service/: __init__.py  main.py  pyproject.toml
ingress_server/services/ingress_service/scrapper/: __init__.py  jobs.py  scheduler.py
ingress_server/services/ingress_service/web/: __init__.py  api.py  auth.py
ingress_server/services/test-dags/dags/: dag.py
ingress_server/services/tmp/: dag.py
ingress_server/src/: active_scrapper.py  configs.py  extractor.py  io_utils.py  main.py  models.py  worker.py
ingress_server/src/active_scrapper/: active_scrapper_config_models.py  context.py  iterate.py  planner.py  render.py  request_builder.py  runner.py  scheduler.py
ingress_server/src/inputs/: endpoints_config.yaml
ingress_server/src/inputs/extract/: bukov_extract.py
ingress_server/src/inputs/schemas/: bukov_schema_v1.yaml
ingress_server/src/test_data/tree/: default.csv
ingress_server/tests/: test_extractors.py  test_notifier.py  test_worker_smoke.py
ingress_server/tests/data/: 20251124T011503_3b200e72354d.json.meta.json
ingress_server/tests/inputs/: endpoints_config.yaml  requirements.txt
ingress_server/tests/inputs/data/: 20251124T011503_3b200e72354d.json  20251124T011503_3b200e72354d.json.meta.json
ingress_server/tests/inputs/dataframes/: hlavo_surface_dataframe.csv
ingress_server/tools/: manual_run.py
(+413 files in other folders)
