[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingress_server"
version = "0.2.0"
description = "Backend-only ingestion service: HTTP endpoints that accept uploads and persist validated tables to an S3-backed Zarr store (no UI)."
readme = "README.md"
urls = { Homepage = "https://github.com/geomop/zarr_fuse" }
authors = [{ name = "Jan Brezina", email = "jan.brezina@tul.cz" }]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
keywords = [
  "backend",
  "ingestion",
  "upload",
  "HTTP API",
  "S3",
  "Zarr",
  "fsspec",
  "Flask",
  "CSV",
  "data pipeline",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "PyYAML==6.0.3",
  "python-dotenv==1.2.1",
  "polars==1.34.0",
  "requests==2.32.5",
  "APScheduler==3.11.2",
  "pydantic==2.12.3",
  "xarray==2026.2.0",
  "cfgrib==0.9.15.1",
  "fastapi==0.135.1",
]

[project.optional-dependencies]
dev = ["pytest==9.0.2"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
ingress_server = "ingress_server.main:main"
