[project]
name = "ingress-server"
description = "Ingress data processing (API + Airflow extractor) monorepo"
version = "0.1.0"
requires-python = ">=3.11"
authors = [
  { name = "Jan Brezina", email = "jan.brezina@tul.cz" }
  { name = "Stepan Moc", email = "stepan.mocik@gmail.com" }
]
license = { text = "BSD-3-Clause" }
keywords = ["API","Airflow","Zarr","s3"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3"
]

dependencies = [
  "fastapi",
  "uvicorn",
  "polars",
  "pydantic",
  "boto3",
  "pyyaml"
]

[project.optional-dependencies]
airflow = ["apache-airflow>=2.10"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
