[project]
name = "ingress-service"
description = "Ingress service for accepting data"
version = "0.1.0"
requires-python = ">=3.11"
authors = [
  { name = "Jan Brezina", email = "jan.brezina@tul.cz" },
  { name = "Stepan Moc", email = "stepan.mocik@gmail.com" },
]
maintainers = [{ name = "Stepan Moc", email = "stepan.mocik@gmail.com" }]
license = "BSD-3-Clause"
keywords = ["API", "s3"]

dependencies = [
  "fastapi==0.120.1",
  "uvicorn==0.38.0",
  "polars==1.34.0",
  "pydantic==2.12.3",
  "APScheduler==3.11.0",
  "requests==2.32.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingress_service*"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
