[project]
name = "extractor-service"
description = "Airflow extractor"
version = "0.1.0"
requires-python = ">=3.11"
authors = [
  { name = "Jan Brezina", email = "jan.brezina@tul.cz" },
  { name = "Stepan Moc", email = "stepan.mocik@gmail.com" },
]
maintainers = [{ name = "Stepan Moc", email = "stepan.mocik@gmail.com" }]
license = "BSD-3-Clause"
keywords = ["Airflow", "Zarr", "s3"]

dependencies = [
  "pydantic>=2",
  "python-dotenv",
  "apache-airflow==3.1.1",
  "zarr_fuse @ git+https://github.com/GeoMop/zarr_fuse.git@main",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["extractor_service*"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
