[project]
name = "test-dags"
description = "Airflow extractor"
version = "0.1.0"
requires-python = ">=3.11"
authors = [
  { name = "Jan Brezina", email = "jan.brezina@tul.cz" },
  { name = "Stepan Moc", email = "stepan.mocik@gmail.com" },
]
maintainers = [{ name = "Stepan Moc", email = "stepan.mocik@gmail.com" }]
license = "BSD-3-Clause"
keywords = ["Airflow", "Zarr", "s3"]

dependencies = [
  "pydantic==2.12.3",
  "python-dotenv==1.2.1",
  "zarr_fuse @ git+https://github.com/GeoMop/zarr_fuse.git@main",
]

[project.optional-dependencies]
apache = ["apache-airflow==3.1.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["test-dags*"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
